--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firedux",
   "version": "1.1.0",
   "description": "Firebase + Redux for ReactJS",
-  "repository": "adjohnson916/firedux",
+  "repository": "AndersDJohnson/firedux",
   "main": "dist/src/index.js",
   "scripts": {
     "verb": "verb",
@@ -34,9 +34,9 @@
     "postrewrite": "npm install",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json"
   },
-  "author": "Anders D. Johnson (https://github.com/adjohnson916)",
+  "author": "Anders D. Johnson (https://github.com/AndersDJohnson)",
   "bugs": {
-    "url": "https://github.com/adjohnson916/firedux/issues"
+    "url": "https://github.com/AndersDJohnson/firedux/issues"
   },
   "license": "MIT",
   "keywords": [
