chore(package): scripts use yarn

--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     "test:lint:src": "eslint src",
     "test:lint:test": "eslint test",
     "test:unit": "npm-run-all test:unit:*",
-    "test:unit:firebase@2": "npm i firebase@2 && npm run _test:unit:firebase@2",
-    "test:unit:firebase@3": "npm i firebase@3 && npm run _test:unit:firebase@3",
-    "_test:unit:firebase@2": "FIREBASE_VERSION=2 npm run _test:unit",
-    "_test:unit:firebase@3": "FIREBASE_VERSION=3 npm run _test:unit",
+    "test:unit:firebase@2": "yarn add firebase@2 && yarn _test:unit:firebase@2",
+    "test:unit:firebase@3": "yarn add firebase@3 && yarn _test:unit:firebase@3",
+    "_test:unit:firebase@2": "FIREBASE_VERSION=2 yarn _test:unit",
+    "_test:unit:firebase@3": "FIREBASE_VERSION=3 yarn _test:unit",
     "_test:unit": "mocha --require babel-core/register",
     "build:node:test": "babel test/index.js -o dist/test/index.js",
     "build:node:test:watch": "babel test/index.js -o dist/test/index.js -w",
     "build:node:src": "babel src/index.js -o dist/src/index.js",
     "build:node:src:watch": "babel src/index.js -o dist/src/index.js -w",
     "build:browser:src": "webpack",
-    "build:browser": "npm run build:browser:src",
+    "build:browser": "yarn build:browser:src",
     "build:node": "npm-run-all build:node:*",
     "build": "npm-run-all build:*",
     "version": "standard-version",
     "publish-please": "publish-please",
     "prepublish": "publish-please guard",
-    "precommit": "npm run test:lint",
+    "precommit": "yarn test:lint",
     "commitmsg": "validate-commit-msg",
-    "prepush": "npm run test",
-    "postmerge": "npm install",
-    "postrewrite": "npm install",
+    "prepush": "yarn test",
+    "postmerge": "yarn addnstall",
+    "postrewrite": "yarn addnstall",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "author": "Anders D. Johnson (https://github.com/AndersDJohnson)",
@@ -76,7 +76,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "firebase": "^3.2.1",
+    "firebase": "3",
     "google-analytics-js": "^0.1.0",
     "lodash": "^4.15.0",
     "updeep": "^1.0.0"
